--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 API_URL = /api/v1
+secret= i-am-good-at-programming
 CONNECTION_STRING = mongodb+srv://shop-user:shopuser123@cluster0.6ns2xse.mongodb.net/
